removing unnecessary relative path

--- a/express_playground/views/add-product.html
+++ b/express_playground/views/add-product.html
@@ -1,2 +1,2 @@
-<%- include('./partials/page.html', {layout:
-include('./layouts/add-product.html')}) %>
+<%- include('partials/page.html', {layout: include('layouts/add-product.html')})
+%>
