refactor with use of layout library

--- a/express_playground/views/layouts/page.html
+++ b/express_playground/views/layouts/page.html
@@ -8,6 +8,6 @@
     <title><%= pageTitle %></title>
   </head>
   <body class="has-navbar-fixed-top">
-    <%- include('./navbar.html') %> <%- layout %>
+    <%- include('../partials/navbar.html') %> <%- body %>
   </body>
 </html>
