--- a/express_playground/views/shop.html
+++ b/express_playground/views/shop.html
@@ -1,1 +1,1 @@
-<%- include('partials/page.html', {layout: include('layouts/shop.html')}) %>
+<%- include('layouts/shop.html', { body: '../content/shop.html' }) %>
