--- a/express_playground/views/404.html
+++ b/express_playground/views/404.html
@@ -1,1 +1,4 @@
-<%- include('./partials/page.html', {layout: include('./layouts/404.html')}) %>
+<h1 class="title is-1">
+  404 <br />
+  Page Not Found 😕
+</h1>
