--- a/express_playground/views/add-product.html
+++ b/express_playground/views/add-product.html
@@ -1,2 +1,1 @@
-<%- include('partials/page.html', {layout: include('layouts/add-product.html')})
-%>
+<%- include('layouts/admin.html', { body: '../content/add-product.html' }) %>
