--- a/express_playground/views/layouts/shop.html
+++ b/express_playground/views/layouts/shop.html
@@ -1,19 +1,5 @@
-<section class="hero is-primary">
-  <div class="hero-body">
-    <h1 class="title is-3"><%= pageTitle %></h1>
-  </div>
-</section>
+<%- include('../partials/hero.html') %>
 
 <section class="section">
-  <div class="container">
-    <div class="box columns">
-      <div class="column is-two-thirds-tablet is-half-widescreen mt-6">
-        <nav class="panel is-link">
-          <p class="panel-heading">📋 List of products</p>
-          <a class="panel-block" href="/">Product1</a>
-          <a class="panel-block" href="/">Product2</a>
-        </nav>
-      </div>
-    </div>
-  </div>
+  <div class="container"><%- include(body) %></div>
 </section>
