--- a/express_playground/views/404.html
+++ b/express_playground/views/404.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/bulma.min.css" />
-    <title>Not Found</title>
-  </head>
-  <body>
-    <h1>
-      404 <br />
-      Page Not Found 😕
-    </h1>
-  </body>
-</html>
+<h1 class="title is-1">
+  404 <br />
+  Page Not Found 😕
+</h1>
