extracting and creating base controllers

--- a/express_playground/views/404.html
+++ b/express_playground/views/404.html
@@ -1,4 +1,5 @@
-<h1 class="title is-1">
-  404 <br />
-  Page Not Found 😕
-</h1>
+<section class="hero is-warning is-fullheight">
+  <div class="hero-body">
+    <h1 class="title is-1">404 Page Not Found 😕</h1>
+  </div>
+</section>
