--- a/express_playground/views/content/shop.html
+++ b/express_playground/views/content/shop.html
@@ -1,9 +1,12 @@
-<div class="box columns">
-  <div class="column is-two-thirds-tablet is-half-widescreen mt-6">
-    <nav class="panel is-link">
-      <p class="panel-heading">📋 List of products</p>
-      <a class="panel-block" href="/">Product1</a>
-      <a class="panel-block" href="/">Product2</a>
-    </nav>
+<div class="tile notification is-link">
+  <p class="title is-4">📋 List of products</p>
+</div>
+<div class="box has-background-white-bis">
+  <div class="columns is-multiline">
+    <% productList.forEach(function({name, description, image}, index) { %> <%-
+    include('../partials/product-tile.html', {name, description, image, index})
+    %> <% }); %> <% if (productList.length === 0) { %>
+    <p>No products available</p>
+    <% } %>
   </div>
 </div>
