--- a/express_playground/views/partials/hero.html
+++ b/express_playground/views/partials/hero.html
@@ -2,6 +2,8 @@
   class="hero <%= typeof background === 'string' ? background : 'is-primary' %>"
 >
   <div class="hero-body">
-    <h1 class="title is-3"><%= pageTitle %></h1>
+    <div class="container">
+      <h1 class="title is-3"><%= pageTitle %></h1>
+    </div>
   </div>
 </section>
