restructuring folder structure

--- a/express_playground/views/admin/layouts/admin.html
+++ b/express_playground/views/admin/layouts/admin.html
@@ -1,4 +1,4 @@
-<%- include('../partials/hero.html', {background: 'is-danger'}) %>
+<%- include('../../common/partials/hero.html', { background: 'is-danger' }) %>
 
 <section class="section">
   <div class="container">
