--- a/express_playground/views/shop/layouts/shop.html
+++ b/express_playground/views/shop/layouts/shop.html
@@ -1,4 +1,4 @@
-<%- include('../partials/hero.html') %>
+<%- include('../../common/partials/hero.html') %>
 
 <section class="section">
   <div class="container"><%- include(body) %></div>
