edit product dummydb

--- a/express_playground/app/templates/partials/text-field.html
+++ b/express_playground/app/templates/partials/text-field.html
@@ -1,4 +1,9 @@
 <div class="field mt-5">
   <label class="label"><%= label %></label>
-  <input class="input is-link" type="text" name="<%= name %>" />
+  <input
+    class="input is-link"
+    type="text"
+    name="<%= name %>"
+    value="<%= typeof value !== 'undefined' ? value : '' %>"
+  />
 </div>
