--- a/express_playground/app/templates/product/layout/edit-product.html
+++ b/express_playground/app/templates/product/layout/edit-product.html
@@ -1,1 +1,1 @@
-<%- include('layouts/admin.html', { body: './product/add-product.html' }) %>
+<%- include('layouts/admin.html', { body: './product/edit-product.html' }) %>
