--- a/express_playground/app/templates/product/partials/admin-tile-actions.html
+++ b/express_playground/app/templates/product/partials/admin-tile-actions.html
@@ -1,8 +1,8 @@
 <div class="card-footer">
   <form
     class="card-footer-item"
-    action="/edit-product/<%= index %>"
-    method="post"
+    action="/admin/edit-product/<%= index %>"
+    method="get"
   >
     <a role="button" type="submit" onclick="this.parentElement.submit()"
       >Edit</a
