adding uuid to products && dummby db products handling by uuid

--- a/express_playground/app/templates/product/edit-product.html
+++ b/express_playground/app/templates/product/edit-product.html
@@ -1,5 +1,5 @@
 <div class="column is-two-thirds-tablet is-half-widescreen mt-6">
-  <form action="/admin/edit-product/<%- id %>" method="post">
+  <form action="/admin/edit-product/<%- uuid %>" method="post">
     <%- include('partials/text-field.html', {name: 'name', label: 'Name', value:
     product.name}) %> <%- include('partials/text-field.html', {name:
     'description', label: 'Description', value: product.description}) %> <%-
