--- a/express_playground/app/templates/product/partials/tile-actions.html
+++ b/express_playground/app/templates/product/partials/tile-actions.html
@@ -1,4 +1,4 @@
-<form class="card-footer" action="/cart-add/<%= index %>" method="post">
+<form class="card-footer" action="/cart-add/<%= uuid %>" method="post">
   <a
     role="button"
     type="submit"
