--- a/express_playground/app/templates/partials/product-tile.html
+++ b/express_playground/app/templates/partials/product-tile.html
@@ -1,7 +1,7 @@
 <div
   class="column is-half-tablet is-one-third-desktop is-one-fourth-widescreen"
 >
-  <div class="card">
+  <div class="card pt-3">
     <div class="card-image">
       <figure class="image">
         <img src="<%= image %>" alt="<%= name %>" />
@@ -12,6 +12,6 @@
 
       <div class="content"><%= description %></div>
     </div>
-    <%- include(actions) %>
+    <%- include(actions, { uuid }) %>
   </div>
 </div>
