adding product detail

--- a/express_playground/app/templates/checkout/checkout.html
+++ b/express_playground/app/templates/checkout/checkout.html
@@ -1,3 +1,7 @@
-<div class="tile notification is-link">
-  <p class="title is-4">🧾 Checkout</p>
-</div>
+<section class="section">
+  <div class="container">
+    <div class="tile notification is-link">
+      <p class="title is-4">🧾 Checkout</p>
+    </div>
+  </div>
+</section>
