--- a/express_playground/app/templates/layouts/page.html
+++ b/express_playground/app/templates/layouts/page.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/bulma.min.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <title><%= pageTitle %></title>
   </head>
   <body class="has-navbar-fixed-top">
-    <%- include('partials/navbar.html') %> <%- body %>
+    <%- include('partials/navbar.html') %> <%- body %> <%- script %>
   </body>
 </html>
