--- a/express_playground/app/templates/product/add-product.html
+++ b/express_playground/app/templates/product/add-product.html
@@ -1,9 +1,15 @@
 <div class="column is-two-thirds-tablet is-half-widescreen mt-6">
-  <form action="/admin/add-product" method="post">
+  <form
+    id="add-product-form"
+    action="/admin/add-product"
+    method="post"
+    onsubmit="this.submit(); this.reset(); return false;"
+  >
     <%- include('partials/text-field.html', {name: 'name', label: 'Name'}) %>
     <%- include('partials/text-field.html', {name: 'description', label:
     'Description'}) %> <%- include('partials/text-field.html', {name: 'image',
-    label: 'Image'}) %>
+    label: 'Image'}) %> <%- include('partials/text-field.html', {name: 'price',
+    label: 'Price'}) %>
     <button class="button is-primary mt-6" type="submit">Send</button>
   </form>
 </div>
