--- a/express_playground/app/templates/layouts/page.html
+++ b/express_playground/app/templates/layouts/page.html
@@ -9,6 +9,6 @@
     <title><%= pageTitle %></title>
   </head>
   <body class="has-navbar-fixed-top">
-    <%- include('partials/navbar.html') %> <%- body %> <%- script %>
+    <%- include('partials/navbar.html') %> <%- body %>
   </body>
 </html>
